  - bugfix CPAN RT #57507: Default MANIFEST.SKIP too aggressive about exclusions
    https://rt.cpan.org/Ticket/Display.html?id=57507
  - bugfix CPAN RT #57586: whole-name-quoted filename can't be read
    https://rt.cpan.org/Ticket/Display.html?id=57586
  - bugfix CPAN RT #57046: Tests fail if $ENV{PERL_MM_MANIFEST_VERBOSE} is set to a false value.
    https://rt.cpan.org/Ticket/Display.html?id=57046
  - bugfix CPAN RT #21283: ExtUtils::Manifest does not follow symlinks
    https://rt.cpan.org/Ticket/Display.html?id=21283
  - bugfix CPAN RT #21290: print to STDERR instead of warn
    https://rt.cpan.org/Ticket/Display.html?id=21290
  - bugfix CPAN RT #3109: Aborting 'make manifest' can leave you with a broken MANIFEST
    https://rt.cpan.org/Ticket/Display.html?id=3109

1.60  Mon, Aug 19, 2011
  - Clean up MANIFEST before creating a new one.

1.59  Mon, Aug 8, 2011
  - Prevent mixing non-native and native newlines in MANIFEST files

1.58  Sun, Nov 21, 2009
  - add MYMETA files to default skip list:
     http://rt.cpan.org/Ticket/Display.html?id=50923
    (suggested by DAGOLDEN)
  - Avoid Devel::Cover and Devel::CoverX::Covered files
    (suggested by daxim)

1.57  Sat, Sep 19, 2009
  - Enhancements to MANIFEST.SKIP from Module::Build:
     http://rt.cpan.org/Ticket/Display.html?id=47401
  - ExtUtils::Manifest::maniskip() incorrectly parses some
    lines with comments and internal whitespace filenames:
      http://rt.cpan.org/Ticket/Display.html?id=45016

1.56  Sun, Jan 4, 2009
  - Add support for VMS in Unix or extended character set mode:
     https://rt.cpan.org/Ticket/Display.html?id=42146

1.55  Sun, Oct 12, 2008
  - test nit with space in filename on VMS:
      http://rt.cpan.org/Ticket/Display.html?id=39934
    Patch supplied by CBERRY
  - add .gitignore to MANIFEST.SKIP:
       http://rt.cpan.org/Ticket/Display.html?id=39823
    Suggested by MSCHWERN

1.54  Tue, Jun 3, 2008
  - make maniskip a public routine, and allow an argument to